Minor fixes: markdown color & navbar z-index

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -6,6 +6,7 @@
   height: auto;
   position: fixed;
   top: 0;
+  z-index: 2
 }
 
 .profilePic {
